--- a/src/pages/Memory/Memory.css
+++ b/src/pages/Memory/Memory.css
@@ -18,7 +18,7 @@
     align-items: center;
     gap: var(--gh--gap--s);
     padding: var(--gh--padding--xs);
-    background-image: url("/bgMemory.webp");
+    background-image: url("/public/assets/bgMemory.webp");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: top center;
